[package]
name = "strong-box"
version = "0.0.0-git"
edition = "2021"
# Remember: changing this is a breaking change (and requires updating CI configs, too)
rust-version = "1.70"

[dependencies]
ciborium-io = { version = "0.2", features = ["std"] }
ciborium-ll = { version = "0.2", features = ["std"] }
chacha20poly1305 = "0.10"
constant_time_eq = "0.3"
hkdf = "0.12"
parking_lot = { version = "0.12", features = ["arc_lock"] }
rand = "0.8"
secrecy = "0.8"
sha2 = "0.10"
thiserror = "1.0"
thiserror-ext = "0.2"
tracing = "0.1"
typenum = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }

[dev-dependencies]
tracing-subscriber = "0.3"
tracing-tree = "0.3"
